--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Nerds</title>
         <link rel="stylesheet" href="style/css/style.css">
 	
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Roboto+Mono|Roboto+Slab" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Slab" rel="stylesheet">
     </head>
 
 
